Alerts by rule description (#26)
* alert routes

* alerts by rule description pie chart pdf
